--- a/deployment/docker-compose/docker-compose.dev.yml
+++ b/deployment/docker-compose/docker-compose.dev.yml
@@ -73,6 +73,9 @@ services:
       - QDRANT_PORT=6333
 
       - OLLAMA_API_URL=http://host.docker.internal:11434
+
+      # OpenAI config (for LLM/Embeddings)
+      - OPENAI_API_KEY=${OPENAI_API_KEY:-}
     depends_on:
       qdrant:
         condition: service_healthy
@@ -196,7 +199,7 @@ services:
       - QDRANT__SERVICE__MAX_REQUEST_SIZE_MB=64
       - QDRANT__SERVICE__GRPC_PORT=6334
       - QDRANT__SERVICE__HTTP_PORT=6333
-      - QDRANT__STORAGE__PERFORMANCE__MAX_SEARCH_THREADS=0  # Use all available CPUs
+      - QDRANT__STORAGE__PERFORMANCE__MAX_SEARCH_THREADS=0 # Use all available CPUs
       - QDRANT__STORAGE__OPTIMIZERS__DEFAULT_SEGMENT_NUMBER=8
       - QDRANT__STORAGE__OPTIMIZERS__MEMMAP_THRESHOLD=50000
       - QDRANT__STORAGE__WAL__WAL_CAPACITY_MB=256
@@ -206,10 +209,10 @@ services:
     deploy:
       resources:
         limits:
-          cpus: '4'
+          cpus: "4"
           memory: 4G
         reservations:
-          cpus: '2'
+          cpus: "2"
           memory: 2G
     ulimits:
       nofile:
