--- a/deployment/docker-compose/docker-compose.prod.yml
+++ b/deployment/docker-compose/docker-compose.prod.yml
@@ -62,6 +62,7 @@ services:
       - QDRANT_HOST=qdrant
       - QDRANT_GRPC_PORT=6334
       - QDRANT_PORT=6333
+      - OPENAI_API_KEY=
 
       - OLLAMA_API_URL=http://host.docker.internal:11434
     depends_on:
@@ -76,7 +77,7 @@ services:
       etcd:
         condition: service_healthy
       arango:
-        condition: service_healthy
+        condition: service_started
     volumes:
       - pipeshub_data:/data/pipeshub
       - pipeshub_root_local:/root/.local
@@ -130,7 +131,7 @@ services:
     volumes:
       - arango_data:/var/lib/arangodb3
     healthcheck:
-      test: ["CMD-SHELL", "arangosh --server.endpoint tcp://localhost:8529 --server.password '${ARANGO_PASSWORD:-your_password}' --javascript.execute-string 'db._version()' || exit 1"]
+      test: ["CMD-SHELL", "arangosh --server.endpoint tcp://127.0.0.1:8529 --server.password '${ARANGO_PASSWORD:-your_password}' --javascript.execute-string 'db._version()' || exit 1"]
       interval: 5s
       timeout: 3s
       retries: 5
@@ -219,14 +220,14 @@ services:
       - QDRANT__CLUSTER__CONSENSUS__MAX_MESSAGE_QUEUE_SIZE=1000
     volumes:
       - qdrant_storage:/qdrant/storage
-    deploy:
-      resources:
-        limits:
-          cpus: '4'
-          memory: 4G
-        reservations:
-          cpus: '2'
-          memory: 2G
+#    deploy:
+#      resources:
+#        limits:
+#          cpus: '4'
+#          memory: 4G
+#        reservations:
+#          cpus: '2'
+#          memory: 2G
     ulimits:
       nofile:
         soft: 50000
