--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "dev": "vite",
     "start": "vite preview",
     "build": "tsc && vite build",
+    "build:dev": "vite build",
     "lint": "eslint \"src/**/*.{js,jsx,ts,tsx}\"",
     "lint:fix": "eslint --fix \"src/**/*.{js,jsx,ts,tsx}\"",
     "fm:check": "prettier --check \"src/**/*.{js,jsx,ts,tsx}\"",
@@ -89,7 +90,7 @@
     "apexcharts": "^3.52.0",
     "autosuggest-highlight": "^3.3.4",
     "aws-amplify": "^6.5.1",
-    "axios": "^1.12.0",
+    "axios": "^1.13.2",
     "dayjs": "^1.11.18",
     "docx-preview": "^0.3.5",
     "dompurify": "^3.2.5",
