fix: Use env variables for MONGO_URI and MONGO_DB_NAME in docker-compose
Changed from hardcoded local MongoDB to environment variables:
- MONGO_URI now reads from .env file (MongoDB Atlas)
- MONGO_DB_NAME now reads from .env file

This fixes the issue where EC2 always reverted to local MongoDB
instead of using the configured Atlas cloud database.

Previous (wrong):
  MONGO_URI=mongodb://admin:password@mongodb:27017/?authSource=admin

Fixed (correct):
  MONGO_URI=${MONGO_URI} (reads from .env file)

--- a/deployment/docker-compose/docker-compose.prod.yml
+++ b/deployment/docker-compose/docker-compose.prod.yml
@@ -54,8 +54,8 @@ services:
       - REDIS_URL=redis://:${REDIS_PASSWORD:-}@redis:6379
 
       # MongoDB config
-      - MONGO_URI=mongodb://${MONGO_USERNAME:-admin}:${MONGO_PASSWORD:-password}@mongodb:27017/?authSource=admin
-      - MONGO_DB_NAME=es
+      - MONGO_URI=${MONGO_URI}
+      - MONGO_DB_NAME=${MONGO_DB_NAME}
 
       # Qdrant config
       - QDRANT_API_KEY=${QDRANT_API_KEY:-your_qdrant_secret_api_key}
