--- a/backend/nodejs/apps/package.json
+++ b/backend/nodejs/apps/package.json
@@ -38,6 +38,7 @@
     "mocha": "^12.0.0-beta-2",
     "multer": "^2.0.0",
     "nodemon": "^3.1.11",
+    "pm2": "^6.0.14",
     "prettier": "^3.4.2",
     "sinon": "^19.0.2",
     "ts-node": "^10.9.2",
@@ -52,11 +53,11 @@
     "@tryfabric/mack": "^1.2.1",
     "@types/bcrypt": "^5.0.2",
     "@types/express-session": "^1.18.1",
+    "@types/js-yaml": "^4.0.9",
     "@types/mongodb": "^4.0.6",
     "@types/multer": "^1.4.12",
     "@types/nodemailer": "^6.4.17",
     "@types/swagger-ui-express": "^4.1.8",
-    "@types/js-yaml": "^4.0.9",
     "arangojs": "^10.1.1",
     "async-mutex": "^0.5.0",
     "aws-sdk": "^2.1534.0",
@@ -65,6 +66,7 @@
     "bcryptjs": "^3.0.2",
     "bullmq": "^5.56.1",
     "cors": "^2.8.5",
+    "cron-parser": "^5.4.0",
     "crypto": "^1.0.1",
     "dotenv": "^16.4.7",
     "etcd3": "^1.1.2",
@@ -83,13 +85,14 @@
     "jwk-to-pem": "^2.0.7",
     "jwks-rsa": "^3.1.0",
     "kafkajs": "^2.2.4",
+    "moment-timezone": "^0.6.0",
     "mongodb": "^6.14.2",
     "mongoose": "^8.9.2",
     "morgan": "^1.10.1",
     "msal-node": "^0.0.1-security",
     "nodemailer": "^7.0.11",
-    "passport-google-oauth20": "^2.0.0",
     "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0",
     "prom-client": "^15.1.3",
     "reflect-metadata": "^0.2.2",
     "sharp": "^0.33.5",
